tests/NormalTests/paczka2/big_fuzzy/59379968.err
Error in line 2: CYH4DS A892 34,4
Error in line 18: S657 A811 11,2
Error in line 21: 7kHkenIPj A46 33,8
Error in line 28: TXbKj7 A46 98,0
Error in line 34: jjI A46 12,9
Error in line 39: tau4KExj A892 46,06
Error in line 40: S657 A46 99,1
Error in line 48: CYH4DS A46 397,97
Error in line 54: S657 S657 51,21
Error in line 60: CYH4DS A46 198,0
Error in line 43: tau4KExj A892 111,4
Error in line 61: S657 S657 34,7
Error in line 53: 7kHkenIPj A46 50,0
Error in line 74: S657 A892 83,09
Error in line 72: S657 A892 24,6
Error in line 55: TXbKj7 A46 98,4
Error in line 63: tau4KExj A46 24,2
Error in line 84: 7kHkenIPj A46 62,3
Error in line 81: jjI A892 71,0
Error in line 99: TXbKj7 S657 44,3
Error in line 105: CYH4DS S657 56,2
Error in line 114: CYH4DS A46 31,3
Error in line 130: S657 S657 11,8
Error in line 149: CYH4DS A46 57,5
Error in line 162: jjI S657 -2,3
Error in line 173: 7kHkenIPj A46 188,6
Error in line 181: o50zrG A811 63,1
Error in line 174: jjI S657 276,0
Error in line 190: jjI A892 86,55
Error in line 188: jjI A46 25,6
Error in line 199: tau4KExj S657 78,5
Error in line 209: o50zrG S657 75,5
Error in line 210: o50zrG A811 34,2
Error in line 215: TXbKj7 A46 -4,6
Error in line 195: jjI A892 51,0
Error in line 230: TXbKj7 A46 240,2
Error in line 223: o50zrG A811 67,8
Error in line 234: o50zrG A46 28,6
Error in line 235: jjI A892 78,5
Error in line 245: CYH4DS A46 50,1
